한번에 back, front를 구동할 수 있게 추가

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,10 +5,10 @@
     "types": []
   },
   "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
+    "frontend/main.ts",
+    "frontend/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "frontend/**/*.d.ts"
   ]
 }
