scss로 변경 / header, footer, navigation, body 등 레이아웃 구성

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
               "frontend/assets"
             ],
             "styles": [
-              "frontend/styles.css"
+              "frontend/styles.scss"
             ],
             "scripts": []
           },
@@ -89,7 +89,7 @@
               "frontend/assets"
             ],
             "styles": [
-              "frontend/styles.css"
+              "frontend/styles.scss"
             ],
             "scripts": []
           }
