--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "aot": "0.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
