--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "~9.1.3",
     "@types/jsonwebtoken": "^8.5.0",
     "aot": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
