--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/qrcode": "^1.3.5",
     "codelyzer": "^5.1.2",
     "concurrently": "^5.3.0",
     "jasmine-core": "~3.5.0",
