barcode도 추가하긴 했는데, crash 난다...

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.3",
     "@types/jsonwebtoken": "^8.5.0",
     "aot": "0.0.3",
+    "barcode": "^0.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -41,6 +42,7 @@
     "@angular/cli": "~9.1.3",
     "@angular/compiler-cli": "~9.1.3",
     "@angular/language-service": "~9.1.3",
+    "@types/barcode": "0.0.30",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
