--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@angular/router": "~9.1.3",
     "@types/jsonwebtoken": "^8.5.0",
     "aot": "0.0.3",
+    "barc": "0.0.4",
     "barcode": "^0.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "canvas": "^2.6.1",
     "express": "^4.17.1",
+    "jsbarcode": "^3.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
